Remove reference to deprecated drag and drop pattern

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1166,7 +1166,9 @@
               <ul>
                 <li>The mouse user may click on either the application or the dialog to change focus between the two.</li>
                 <li>In a Web application the non-modal dialog is usually always displayed above the application page, rather than in a separate browser window but that is not a requirement.</li>
+              	<!-- Removed because drag and drop is deprecated 
                 <li>This dialog box is draggable by the mouse user and an equivalent behavior (<a href="#draganddrop" class="design-pattern-reference">Drag &amp; Drop</a>) should be offered to the keyboard only user.</li>
+                -->
                 <li>
                   Authors should take care when using <kbd>Enter</kbd> to trigger default actions since <kbd>Enter</kbd> might be connected to and trigger some other user interface element, or it might trigger the focused element.
                   Authors should ensure that <kbd>Enter</kbd> activates only the widget they intend.
