Removed removed value

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -5181,7 +5181,7 @@ field. </p>
     &lt;/ul&gt;
   &lt;/li&gt;
 &lt;/ul&gt;</pre>
-        <p>The use of <code>aria-expanded</code> should mirror that which is visibly expanded on screen, so authors may wish to use <abbr title="Cascading Style Sheets">CSS</abbr> attribute selectors to toggle visibility or style of an item based on the <a href="#dfn-value" class="specref termref">value</a> of an <abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> <a href="#dfn-state" class="specref termref">state</a> or <a href="#dfn-property" class="specref termref">property</a>. The following example would hide the sub-level groups of a collapsed tree node.</p>
+        <p>The use of <code>aria-expanded</code> should mirror that which is visibly expanded on screen, so authors may wish to use <abbr title="Cascading Style Sheets">CSS</abbr> attribute selectors to toggle visibility or style of an item based on the value of an <abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> <a href="#dfn-state" class="specref termref">state</a> or <a href="#dfn-property" class="specref termref">property</a>. The following example would hide the sub-level groups of a collapsed tree node.</p>
         <pre class="example highlight">[aria-expanded=&quot;false&quot;] [role=&quot;group&quot;] { display: none; }</pre>
         <p class="note">
           <!-- keep this note synced with other CSS examples using attribute selectors -->
