Fix for issue 312

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -228,7 +228,7 @@
         The general navigation model is for a user to tab to a widget, interact with the controls in that widget and then tab to move focus to the next widget in the tab order.
         By extension, when the construct of a widget contains another widget, tab will move focus to the contained widget because it is the next item in the tab order.
         This continues down the layers of widgets until the last widget is reached.
-        For example, if there are two widgets A and B on a page where widget A contains within it Widget A1 and Widget A1 contains within it Widget A2, the focus sequence when pressing the tab key would be A1, A2, A3, B.
+        For example, if there are two widgets A and B on a page where widget A contains within it Widget A1 and Widget A1 contains within it Widget A2, the focus sequence when pressing the tab key would be A, A1, A2, B.
       </p>
     </section>
 
