Add link to local example - thanks Jemma

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1548,7 +1548,7 @@
         <h4>Example</h4>
         <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
         <ul>
-          <li><a href="http://dojotoolkit.org/reference-guide/dijit/form/DropDownButton.html" title="dijit.form.DropDownButton &#8212; The Dojo Toolkit - Reference Guide" target="_blank">dojo/dijit menu button</a></li>
+          <li><a href="examples/menu-button/menu-button-1.html">Menu button role example</a></li>
         </ul>
       </section>
     </section>
