inconsistent pluralization in new landmarks section (#341)

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -207,8 +207,8 @@
     <h2>Landmark Roles Design Patterns</h2>
 
     <p>Landmarks provide a powerful way to identify the organization and structure of a web page. The structural information
-    conveyed visually to users should be represented programmatically in the markup using landmark roles. The use of landmarks
-    roles support keyboard navigation to the structure of a web page for screen reader users, and can be used as targets for author
+    conveyed visually to users should be represented programmatically in the markup using landmark roles. The use of landmark
+    roles supports keyboard navigation to the structure of a web page for screen reader users, and can be used as targets for author
     supplied &quot;skip links&quot; and browser extensions for enhanced keyboard navigation.</p>
 
     <p>This section is intended to assist designers, developers and quality assurance staff in defining and understanding the
