On branch apg_dialogPattern, modified:   aria-practices.html to correct typo in modal dialog pattern description.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1403,7 +1403,7 @@
       <h3>Dialog (Modal)</h3>
       <p> A <a href="#dialog" class="role-reference">dialog</a> is a window overlayed on the primary window. 
       A modal dialog is designed to interrupt the user to, for example, prompt the user to confirm an action or enter information, and it traps or contains keyboard focus until the dialog is closed.
-        ARIA has a special role for modal dialogs that convey a brief, import message to the user -- the <a href="#alertdialog" class="role-reference">alertdialog</a> ( See the <a href="#alertdialog">Alert Dialog</a> design pattern).
+        ARIA has a special role for modal dialogs that convey a brief, important message to the user -- the <a href="#alertdialog" class="role-reference">alertdialog</a> ( See the <a href="#alertdialog">Alert Dialog</a> design pattern).
       </p>
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
