Correct link to Editors Draft

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
       // If there a publicly available Editors Draft, this is the link
-      edDraftURI: "http://w3c.github.io/aria/practices/aria-practices.html",
+      edDraftURI: "http://w3c.github.io/aria-practices/",
 
       // If this is a LCWD, uncomment and set the end of its review period
       // lcEnd: "2012-02-21",
