--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1848,16 +1848,16 @@
         <h4>WAI-ARIA Roles, States, and Properties</h4>
         <ul>
           <li>An element that contains or owns all the listbox options has role <a href="#listbox" class="role-reference">listbox</a>.</li>
-          <li>Each option in the listbox has role <a href="#option" class="role-reference">option</a> and is a DOM  child of the element with role <a href="#listbox" class="role-reference">listbox</a or is referenced by the <a href="#aria-owns" class="property-reference">aria-owns</a> property on the listbox element.</li>
-          <li>If the listbox is not part of another widget, then it should have a visible label referenced on the listbox by <a href="#aria-labelledby" class="property-reference">aria-labelledby</a>.</li>
-          <li>Each selected option has <a href="#aria-selected" class="property-reference">aria-selected</a> set to <code>true</code> </li>
+          <li>Each option in the listbox has role <a href="#option" class="role-reference">option</a> and is a DOM  descendant of the element with role <code>listbox</code> or is referenced by an <a href="#aria-owns" class="property-reference">aria-owns</a> property on the listbox element.</li>
+          <li>If the listbox is not part of another widget, then it has a visible label referenced by <a href="#aria-labelledby" class="property-reference">aria-labelledby</a> on the element with role <code>listbox</code>.</li>
+          <li>Each selected option has <a href="#aria-selected" class="property-reference">aria-selected</a> set to <code>true</code>. </li>
           <li>if the listbox supports multiple selection:
           <ul>
           <li> The element with role <code>listbox</code> has <a href="#aria-multiselectable" class="property-reference">aria-multiselectable</a> set to <code>true</code>. </li>
           <li>All selected options have <a href="#aria-selected" class="state-reference">aria-selected</a> set to <code>true</code>. </li>
           <li>All options that are not selected have <a href="#aria-selected" class="state-reference">aria-selected</a> set to <code>false</code>. </li>
           </ul>
-          <li>If all options are not present in the DOM due to dynamic loading, their <a href="#aria-setsize" class="property-reference">aria-setsize</a> and <a href="#aria-posinset" class="property-reference">aria-posinset</a> are set appropriately. Otherwise, this information cannot  be computed for context by the user agent.</li>
+          <li>If the complete set of available options is not present in the DOM due to dynamic loading as the user scrolls, their <a href="#aria-setsize" class="property-reference">aria-setsize</a> and <a href="#aria-posinset" class="property-reference">aria-posinset</a> attributes are set appropriately. </li>
           </li>
         </ul>
       </section>
