On branch listbox, modified:   aria-practices.html: minor editorial change to aria-selected statement for single select listboxes.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1852,7 +1852,7 @@
           <li>An element that contains or owns all the listbox options has role <a href="#listbox" class="role-reference">listbox</a>.</li>
           <li>Each option in the listbox has role <a href="#option" class="role-reference">option</a> and is a DOM  descendant of the element with role <code>listbox</code> or is referenced by an <a href="#aria-owns" class="property-reference">aria-owns</a> property on the listbox element.</li>
           <li>If the listbox is not part of another widget, then it has a visible label referenced by <a href="#aria-labelledby" class="property-reference">aria-labelledby</a> on the element with role <code>listbox</code>.</li>
-          <li>Each selected option has <a href="#aria-selected" class="property-reference">aria-selected</a> set to <code>true</code>. </li>
+          <li>The selected option has <a href="#aria-selected" class="property-reference">aria-selected</a> set to <code>true</code>. </li>
           <li>if the listbox supports multiple selection:
           <ul>
           <li> The element with role <code>listbox</code> has <a href="#aria-multiselectable" class="property-reference">aria-multiselectable</a> set to <code>true</code>. </li>
